[package]
name = "unquantified"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["rkyv-32"] }
csv = "1.3.0"
rayon = "1.10.0"
rkyv = "0.7.44"
serde = { version = "1.0.203", features = ["derive"] }
stopwatch = "0.0.7"

[[bin]]
name = "csv_parser"
path = "src/csv_parser/main.rs"
