[package]
name = "unq-common"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["rkyv-32", "serde"] }
chrono-tz = "0.9.0"
configparser = "3.1.0"
csv = "1.3.0"
dashmap = "6.0.1"
lazy_static = "1.5.0"
regex = "1.10.5"
rkyv = "0.7.44"
serde = { version = "1.0.203", features = ["derive", "rc"] }
strum = "0.26.3"
strum_macros = "0.26.4"
zstd = "0.13.1"
