[package]
name = "unq-parser"
version = "0.5.0"
edition = "2021"
default-run = "unq-parser"

[dependencies]
unq-common = { version = "0.4.0", path = "../unq-common" }
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["rkyv-32", "serde"] }
chrono-tz = "0.9.0"
configparser = "3.1.0"
csv = "1.3.0"
dashmap = "6.0.1"
lazy_static = "1.5.0"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
stopwatch = "0.0.7"

[[bin]]
name = "unq-parser"
path = "src/main.rs"
