[package]
name = "unq-server"
version = "0.4.0"
edition = "2021"
default-run = "unq-server"

[dependencies]
unq-common = { version = "0.5.0", path = "../unq-common" }
unq-strategy = { version = "0.1.0", path = "../unq-strategy" }
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["rkyv-32", "serde"] }
configparser = "3.1.0"
csv = "1.3.0"
futures-util = "0.3.30"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
stopwatch = "0.0.7"

[[bin]]
name = "unq-server"
path = "src/main.rs"
